throbac/ThrobacParser.py
# Generated from /Users/phillips/Sync/courses/EEE340/code/lab 2 start/Throbac.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ThrobacParser ( Parser ):

    grammarFileName = "Throbac.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'APUD'", "','", "'DEFINITIO'", "'PRAEBET'", 
                     "'>'", "'<'", "'MUTABILIS'", "':'", "'VALORUM'", "'DUM'", 
                     "'SI'", "'ALUID'", "'NUMERUS.IMPRIMO'", "'LOCUTIO.IMPRIMO'", 
                     "'VERITAS.IMPRIMO'", "'REDEO'", "'('", "')'", "'NI'", 
                     "'NEGANS'", "'CONGERO'", "'PARTIO'", "'ADDO'", "'SUBTRAHO'", 
                     "'IUNGO'", "'IDEM'", "'NI.IDEM'", "'INFRA'", "'INFRA.IDEM'", 
                     "'SUPRA'", "'SUPRA.IDEM'", "'VOCO'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "NUMBER", "STRING", "BOOL", "TYPE", "ID", 
                      "WS", "COMMENT" ]

    RULE_script = 0
    RULE_funcDef = 1
    RULE_main = 2
    RULE_body = 3
    RULE_varDec = 4
    RULE_nameDef = 5
    RULE_varBlock = 6
    RULE_block = 7
    RULE_statement = 8
    RULE_expr = 9
    RULE_funcCall = 10

    ruleNames =  [ "script", "funcDef", "main", "body", "varDec", "nameDef", 
                   "varBlock", "block", "statement", "expr", "funcCall" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    NUMBER=33
    STRING=34
    BOOL=35
    TYPE=36
    ID=37
    WS=38
    COMMENT=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ScriptContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def main(self):
            return self.getTypedRuleContext(ThrobacParser.MainContext,0)


        def EOF(self):
            return self.getToken(ThrobacParser.EOF, 0)

        def funcDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ThrobacParser.FuncDefContext)
            else:
                return self.getTypedRuleContext(ThrobacParser.FuncDefContext,i)


        def getRuleIndex(self):
            return ThrobacParser.RULE_script

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScript" ):
                listener.enterScript(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScript" ):
                listener.exitScript(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScript" ):
                return visitor.visitScript(self)
            else:
                return visitor.visitChildren(self)




    def script(self):

        localctx = ThrobacParser.ScriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_script)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 22
                    self.funcDef() 
                self.state = 27
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 28
            self.main()
            self.state = 29
            self.match(ThrobacParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ThrobacParser.ID, 0)

        def body(self):
            return self.getTypedRuleContext(ThrobacParser.BodyContext,0)


        def nameDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ThrobacParser.NameDefContext)
            else:
                return self.getTypedRuleContext(ThrobacParser.NameDefContext,i)


        def TYPE(self):
            return self.getToken(ThrobacParser.TYPE, 0)

        def getRuleIndex(self):
            return ThrobacParser.RULE_funcDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDef" ):
                listener.enterFuncDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDef" ):
                listener.exitFuncDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDef" ):
                return visitor.visitFuncDef(self)
            else:
                return visitor.visitChildren(self)




    def funcDef(self):

        localctx = ThrobacParser.FuncDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_funcDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 31
                self.match(ThrobacParser.T__0)
                self.state = 32
                self.nameDef()
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==2:
                    self.state = 33
                    self.match(ThrobacParser.T__1)
                    self.state = 34
                    self.nameDef()
                    self.state = 39
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 42
            self.match(ThrobacParser.T__2)
            self.state = 43
            self.match(ThrobacParser.ID)
            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 44
                self.match(ThrobacParser.T__3)
                self.state = 45
                self.match(ThrobacParser.TYPE)


            self.state = 48
            self.match(ThrobacParser.T__4)
            self.state = 49
            self.body()
            self.state = 50
            self.match(ThrobacParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body(self):
            return self.getTypedRuleContext(ThrobacParser.BodyContext,0)


        def getRuleIndex(self):
            return ThrobacParser.RULE_main

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain" ):
                listener.enterMain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain" ):
                listener.exitMain(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain" ):
                return visitor.visitMain(self)
            else:
                return visitor.visitChildren(self)




    def main(self):

        localctx = ThrobacParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_main)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varBlock(self):
            return self.getTypedRuleContext(ThrobacParser.VarBlockContext,0)


        def block(self):
            return self.getTypedRuleContext(ThrobacParser.BlockContext,0)


        def getRuleIndex(self):
            return ThrobacParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = ThrobacParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.varBlock()
            self.state = 55
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nameDef(self):
            return self.getTypedRuleContext(ThrobacParser.NameDefContext,0)


        def getRuleIndex(self):
            return ThrobacParser.RULE_varDec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDec" ):
                listener.enterVarDec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDec" ):
                listener.exitVarDec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDec" ):
                return visitor.visitVarDec(self)
            else:
                return visitor.visitChildren(self)




    def varDec(self):

        localctx = ThrobacParser.VarDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varDec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.nameDef()
            self.state = 58
            self.match(ThrobacParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NameDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ThrobacParser.ID, 0)

        def TYPE(self):
            return self.getToken(ThrobacParser.TYPE, 0)

        def getRuleIndex(self):
            return ThrobacParser.RULE_nameDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNameDef" ):
                listener.enterNameDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNameDef" ):
                listener.exitNameDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNameDef" ):
                return visitor.visitNameDef(self)
            else:
                return visitor.visitChildren(self)




    def nameDef(self):

        localctx = ThrobacParser.NameDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_nameDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(ThrobacParser.ID)
            self.state = 61
            self.match(ThrobacParser.T__7)
            self.state = 62
            self.match(ThrobacParser.TYPE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ThrobacParser.VarDecContext)
            else:
                return self.getTypedRuleContext(ThrobacParser.VarDecContext,i)


        def getRuleIndex(self):
            return ThrobacParser.RULE_varBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarBlock" ):
                listener.enterVarBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarBlock" ):
                listener.exitVarBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarBlock" ):
                return visitor.visitVarBlock(self)
            else:
                return visitor.visitChildren(self)




    def varBlock(self):

        localctx = ThrobacParser.VarBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_varBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 64
                    self.varDec() 
                self.state = 69
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ThrobacParser.StatementContext)
            else:
                return self.getTypedRuleContext(ThrobacParser.StatementContext,i)


        def getRuleIndex(self):
            return ThrobacParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = ThrobacParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 201865232386) != 0:
                self.state = 70
                self.statement()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ThrobacParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PrintNumberContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ThrobacParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ThrobacParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintNumber" ):
                listener.enterPrintNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintNumber" ):
                listener.exitPrintNumber(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintNumber" ):
                return visitor.visitPrintNumber(self)
            else:
                return visitor.visitChildren(self)


    class AssignmentContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ThrobacParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(ThrobacParser.ID, 0)
        def expr(self):
            return self.getTypedRuleContext(ThrobacParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)


    class FuncCallStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ThrobacParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def funcCall(self):
            return self.getTypedRuleContext(ThrobacParser.FuncCallContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncCallStmt" ):
                listener.enterFuncCallStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncCallStmt" ):
                listener.exitFuncCallStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncCallStmt" ):
                return visitor.visitFuncCallStmt(self)
            else:
                return visitor.visitChildren(self)


    class PrintBoolContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ThrobacParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ThrobacParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintBool" ):
                listener.enterPrintBool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintBool" ):
                listener.exitPrintBool(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintBool" ):
                return visitor.visitPrintBool(self)
            else:
                return visitor.visitChildren(self)


    class WhileContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ThrobacParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ThrobacParser.ExprContext,0)

        def block(self):
            return self.getTypedRuleContext(ThrobacParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile" ):
                listener.enterWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile" ):
                listener.exitWhile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile" ):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)


    class PrintStringContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ThrobacParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ThrobacParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintString" ):
                listener.enterPrintString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintString" ):
                listener.exitPrintString(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintString" ):
                return visitor.visitPrintString(self)
            else:
                return visitor.visitChildren(self)


    class IfContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ThrobacParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ThrobacParser.ExprContext,0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ThrobacParser.BlockContext)
            else:
                return self.getTypedRuleContext(ThrobacParser.BlockContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf" ):
                listener.enterIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf" ):
                listener.exitIf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf" ):
                return visitor.visitIf(self)
            else:
                return visitor.visitChildren(self)


    class ReturnContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ThrobacParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ThrobacParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn" ):
                listener.enterReturn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn" ):
                listener.exitReturn(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn" ):
                return visitor.visitReturn(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = ThrobacParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                localctx = ThrobacParser.AssignmentContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.match(ThrobacParser.ID)
                self.state = 77
                self.expr(0)
                self.state = 78
                self.match(ThrobacParser.T__8)
                pass

            elif la_ == 2:
                localctx = ThrobacParser.WhileContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                self.expr(0)
                self.state = 81
                self.match(ThrobacParser.T__9)
                self.state = 82
                self.match(ThrobacParser.T__4)
                self.state = 83
                self.block()
                self.state = 84
                self.match(ThrobacParser.T__5)
                pass

            elif la_ == 3:
                localctx = ThrobacParser.IfContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 86
                self.expr(0)
                self.state = 87
                self.match(ThrobacParser.T__10)
                self.state = 88
                self.match(ThrobacParser.T__4)
                self.state = 89
                self.block()
                self.state = 90
                self.match(ThrobacParser.T__5)
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==12:
                    self.state = 91
                    self.match(ThrobacParser.T__11)
                    self.state = 92
                    self.match(ThrobacParser.T__4)
                    self.state = 93
                    self.block()
                    self.state = 94
                    self.match(ThrobacParser.T__5)


                pass

            elif la_ == 4:
                localctx = ThrobacParser.PrintNumberContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 98
                self.expr(0)
                self.state = 99
                self.match(ThrobacParser.T__12)
                pass

            elif la_ == 5:
                localctx = ThrobacParser.PrintStringContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 101
                self.expr(0)
                self.state = 102
                self.match(ThrobacParser.T__13)
                pass

            elif la_ == 6:
                localctx = ThrobacParser.PrintBoolContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 104
                self.expr(0)
                self.state = 105
                self.match(ThrobacParser.T__14)
                pass

            elif la_ == 7:
                localctx = ThrobacParser.ReturnContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if ((_la) & ~0x3f) == 0 and ((1 << _la) & 201865166850) != 0:
                    self.state = 107
                    self.expr(0)


                self.state = 110
                self.match(ThrobacParser.T__15)
                pass

            elif la_ == 8:
                localctx = ThrobacParser.FuncCallStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 111
                self.funcCall()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ThrobacParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class NumberContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ThrobacParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(ThrobacParser.NUMBER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumber" ):
                listener.enterNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumber" ):
                listener.exitNumber(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumber" ):
                return visitor.visitNumber(self)
            else:
                return visitor.visitChildren(self)


    class ParensContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ThrobacParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ThrobacParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParens" ):
                listener.enterParens(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParens" ):
                listener.exitParens(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParens" ):
                return visitor.visitParens(self)
            else:
                return visitor.visitChildren(self)


    class NegationContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ThrobacParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ThrobacParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNegation" ):
                listener.enterNegation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNegation" ):
                listener.exitNegation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNegation" ):
                return visitor.visitNegation(self)
            else:
                return visitor.visitChildren(self)


    class CompareContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ThrobacParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ThrobacParser.ExprContext)
            else:
                return self.getTypedRuleContext(ThrobacParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompare" ):
                listener.enterCompare(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompare" ):
                listener.exitCompare(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompare" ):
                return visitor.visitCompare(self)
            else:
                return visitor.visitChildren(self)


    class ConcatenationContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ThrobacParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ThrobacParser.ExprContext)
            else:
                return self.getTypedRuleContext(ThrobacParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConcatenation" ):
                listener.enterConcatenation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConcatenation" ):
                listener.exitConcatenation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConcatenation" ):
                return visitor.visitConcatenation(self)
            else:
                return visitor.visitChildren(self)


    class StringContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ThrobacParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(ThrobacParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)


    class BoolContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ThrobacParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BOOL(self):
            return self.getToken(ThrobacParser.BOOL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBool" ):
                listener.enterBool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBool" ):
                listener.exitBool(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBool" ):
                return visitor.visitBool(self)
            else:
                return visitor.visitChildren(self)

